# linux-environment-setup

./: .gitignore  CMakeLists.txt  README.md  install-tools.sh  install_environment.sh  setup-environment.py  setup-environment.sh  setup-pkgs.sh
environment/: .bash_aliases_custom  .bashrc  .functions  .gdbinit  .indurad_functions  .profile  .setup_environment  .tmux.conf  bash_aliases  bashrc  functions  indurad_functions  setup_environment
environment/.config/FreeCAD/: user.cfg
environment/.config/QtProject/: QtCreator.ini
environment/.config/i3/: config
environment/.config/klogg/: highlighters.conf
environment/.continue/: config.json
environment/.gdfuse/default/: config
python-tools/: CMakeLists.txt
python-tools/DEBIAN/: control  preinst  prerm
python-tools/python-tools/: git-replace.py
python-tools/python-tools/Finances/: FinanceRoutines.py
python-tools/python-tools/PyPlotTools/: Printers.py
python-tools/usr/shares/python-tools/: git-replace.py
python3-tools/: CMakeLists.txt
python3-tools/DEBIAN/: control
python3-tools/pkg/DEBIAN/: control
python3-tools/pkg/usr/shares/python3-tools/: brightness  brightness.py  git-replace.py  http-mjpeg-video-streaming-server.py  http-video-streamin-server.py  rtsp-video-streaming-server.py  update-softfs.py
python3-tools/pkg/usr/shares/python3-tools/Finances/: CreditCalculator.py  FinanceRoutines.py  InvestmentCalculator.py
python3-tools/pkg/usr/shares/python3-tools/Finances/tests/: test_credit_calculator.py  test_investment_calculator.py
python3-tools/pkg/usr/shares/python3-tools/Finances/tests/examples/: credit_config.json  credit_config2.json
python3-tools/pkg/usr/shares/python3-tools/LinalgTools/: Transforms.py
python3-tools/pkg/usr/shares/python3-tools/PyPlotTools/: Printers.py
python3-tools/usr/shares/python3-tools/: git-replace.py
(+5 files in other folders)
